:sparkles: add delete company handler logic
